--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,23 @@ a{
 .main-screen{
   margin: 0 var(--horizontal-space);
 }
+
+#screen_size_limit{
+  position: absolute;
+  top: 0;
+  z-index: 101;
+  height: 100vh;
+  width: 100vw;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  font-weight: 600;
+  background-color: yellow;
+  color: whitesmoke;
+}
+@media screen and (min-width: 600px){
+  #screen_size_limit{
+    display: flex;
+  }
+}
